[tool.poetry]
name = "chargpt"
version = "0.1.0"
description = ""
authors = ["Shahriar-Ferdoush <1805101@ugrad.cse.buet.ac.bd>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.46.2"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
